2005-03-24  David Schleef  <ds@schleef.org>

	* Makefile.am: Re-add m4 directory
	* configure.ac: Use a real macro to generate stdint.h
	* libswfdec/actions.c: (pc_is_valid), (action_jump), (action_if),
	(action_constant_pool): Check PC values when jumping.  Fix memleak
	when freeing constant pools.  (From Eric Anholt)
	* libswfdec/proto.h: cleanup
	* libswfdec/swf.c: (tag_func_end), (tag_func_ignore): cleanup.
	Make Protect tag quieter.
	* libswfdec/swfdec_internal.h: include local stdint.h
	* libswfdec/swfdec_shape.c: (swf_shape_get_recs),
	(swf_shape_ignore_recs), (swf_morphshape_get_recs): fix
	gratuitous use of int16_t.
	* m4/ax_create_stdint_h.m4: add

2005-03-24  David Schleef  <ds@schleef.org>

	Changes from Eric Anholt
	* configure.ac: Create a stdint.h if it doesn't exist.
	* libswfdec/actions.c: Fix go_to_label
	* libswfdec/swfdec_button.c: (tag_func_define_button_2): Use the
	correct segment length -- fixes warning.

2005-03-24  David Schleef  <ds@schleef.org>

	* configure.ac: version bump

2005-03-24  David Schleef  <ds@schleef.org>

	* plugin/gstappsrc.c: (gst_appsrc_class_init), (gst_appsrc_init),
	(gst_appsrc_get_property), (gst_appsrc_loop): Add source_url
	property, for relaying metadata from Mozilla
	* plugin/gstappsrc.h: add to object
	* plugin/plugin.c: (plugin_thread), (plugin_newp),
	(plugin_set_window): push metadata info from Mozilla to helper
	app
	* plugin/spp.h: Add new GO_TO_URL2 and METADATA methods.
	GO_TO_URL2 sends both the target and URL.  METADATA sends
	metadata from Mozilla to the app.
	* plugin/swfdec-mozilla-player.c: (menu_open), (menu_report_bug),
	(button_press_event), (embed_url), (packet_go_to_url): Use new
	methods.

2005-03-24  David Schleef  <ds@schleef.org>

	* configure.ac: version bump
	* libswfdec/actions.c: (action_set_variable): set variable to
	the value, not the variable name. (fix from Eric Anholt)

=== release 0.3.4 ===

2005-03-19  David Schleef  <ds@schleef.org>

	* configure.ac: version nano bump